# cookiecutter-python

./: README.md
docs/: description.md  guide.md  index.md
src/scicookie/: cookiecutter.json
src/scicookie/hooks/: post_gen_project.py
src/scicookie/profiles/: base.yaml
src/scicookie/{{cookiecutter.project_slug}}/: Makefile  README.md
src/scicookie/{{cookiecutter.project_slug}}/build-system/: meson.build  mesonpy-pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/conda/: dev.yaml
src/scicookie/{{cookiecutter.project_slug}}/docs/: contributing.md  index.md
tests/smoke/: base.sh
